fix(benefits-payments): Fix logos flex wrap

--- a/layouts/partials/product.css
+++ b/layouts/partials/product.css
@@ -83,6 +83,7 @@
 .product__payment-logos {
   display: flex;
   margin: 0 1rem;
+  flex-wrap: wrap;
 }
 
 .product__benefits {
@@ -101,7 +102,7 @@
   height: 24px;
   width: auto;
   display: block;
-  margin-right: 10px;
+  margin: 0 10px 10px 0;
 }
 
 .product-reviews .rating {
